Flicker issue fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
-
+body{
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 .App {
   text-align: center;
 }
